Fix crash when using Contionous Selection tool with Feather option

KisSelectionDefaultBounds should not care about the image, it should
take all the values from the parent device's default bounds object.

BUG:412622