plugins/extensions/colorrange/dlg_colorrange.cc
@@ -194,7 +194,7 @@ void DlgColorRange::slotSelectClicked()
 
     int fuzziness = m_page->intFuzziness->value();
 
-    KisSelectionSP selection = new KisSelection(new KisSelectionDefaultBounds(m_viewManager->activeDevice(), m_viewManager->image()));
+    KisSelectionSP selection = new KisSelection(new KisSelectionDefaultBounds(m_viewManager->activeDevice()));
 
     KisHLineConstIteratorSP hiter = m_viewManager->activeDevice()->createHLineConstIteratorNG(x, y, w);
     KisHLineIteratorSP selIter = selection->pixelSelection()->createHLineIteratorNG(x, y, w);
